# pcct_md_diffusion

./: .gitignore  osc_modules.sh  pyproject.toml  readme.md  requirementx.txt
src/pcct_md_diffusion/: locations.py
src/pcct_md_diffusion/baseline/: fbp_recon.ipynb
src/pcct_md_diffusion/fbp/: __init__.py  filters.py
src/pcct_md_diffusion/fbp/notebooks/: fbp_recon.ipynb  fp_and_fbp.ipynb  fp_and_fbp_demo.ipynb
src/pcct_md_diffusion/md/md_fp/calibration/: emec.py
src/pcct_md_diffusion/md/md_fp/decomposition/: emec_decomp.py
src/pcct_md_diffusion/md/md_img/calibration/: get_calibration_table.py
src/pcct_md_diffusion/md/md_img/decomposition/: mmd_decomp.py
src/pcct_md_diffusion/md/md_img/notebooks/: md.ipynb
src/pcct_md_diffusion/md/post_correction_img/notebooks/: BHC_demo.ipynb  EBHC_simul.ipynb  ebhc_fit_to_real.ipynb  mect_phantom_simul.ipynb  post_correction_calibration_8_41.ipynb  spectrum_est_real.ipynb  spectrum_estimation.docx
src/pcct_md_diffusion/utils/: __init__.py  attenuation.py  ml_tools.py  utils.py
